# tradebot

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  INSTALL.md  Makefile  README.md  docker-compose.yml  pyproject.toml  start_macos.command  start_windows.bat  test_tinkoff.py  watchlist.example.yml  watchlist.yaml
docs/: ARCHITECTURE_NOTES.md  DEPLOYMENT_WINDOWS.md  PROJECT_BRIEF.md  SESSION_LOG.md  TOKEN_ECONOMY.md
migrations/: env.py
migrations/versions/: 001_instruments_watchlist_candles.py  002_analysis_tables.py  003_signals_tables.py  004_telegram_users.py
src/tradebot/: __main__.py  cli.py
src/tradebot/ai/: __init__.py  analyzer.py  noop.py  protocol.py
src/tradebot/analysis/: __init__.py  indicators.py  levels.py  snapshot.py  structure.py  trend.py  volatility.py  volume.py
src/tradebot/broker/: instruments.py  market_data.py  rate_limiter.py  retry.py  tinvest_client.py  trading_status.py
src/tradebot/core/: config.py  enums.py  errors.py  logging.py  time.py  types.py
src/tradebot/db/: base.py  unit_of_work.py
src/tradebot/executor/: __init__.py  trading_executor.py
src/tradebot/news/: __init__.py  mock.py  protocol.py
src/tradebot/risk/: __init__.py  deduplicator.py  validator.py
src/tradebot/scheduler/: __init__.py  scanner_service.py  scheduler.py
src/tradebot/signals/: __init__.py  formatter.py  models.py
src/tradebot/strategy/: base.py  bounce_level.py  breakdown.py  engine.py  pullback_in_trend.py  trend_breakout.py
src/tradebot/telegram/: __init__.py  notifier.py
tests/: conftest.py
tests/unit/core/: test_config.py  (+2 more)
(+26 files in other folders)
