[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradebot"
version = "0.1.0"
description = "T-Invest Signal Bot — фаза 1: сигнальный сканер"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "aiogram>=3.7",
    "openai>=1.30",
    # t-tech-investments устанавливается отдельно:
    # uv pip install t-tech-investments \
    #   --index-url https://opensource.tbank.ru/api/v4/projects/238/packages/pypi/simple
]

[project.scripts]
tradebot = "tradebot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tradebot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: тесты с реальными API-вызовами (не запускать в CI)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
